fix: aplicar correções do sonar em classes de teste